--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -18,7 +18,7 @@
     Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga possuindo registro de seu uso em 3100 a.C.
     Em relação à essa época, \citeauthor{boy}(\citeyear{boy}) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
     com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
-    Ou seja, a ação de medir era dada, matematicamente, de forma empírica não havendo o famoso rigor matemático que conhecemos hoje.
+    Ou seja, a ação de medir era dada de forma empírica não havendo o rigor matemático que conhecemos hoje.
    
     \enquote{
     	Pelo fim do século dezenove, a ênfase no rigor levou numerosos matemáticos à produção de exemplos de funções 'patológicas' que, devido a alguma propriedade incomum, violavam um teorema que antes se supunha válido em geral
