--- a/elementos-pre-textuais/resumo.tex
+++ b/elementos-pre-textuais/resumo.tex
@@ -1,7 +1,7 @@
 A teoria da medida e da integração é um tema importante para o avanço nos estudos de matemática.
 Esta foi desenvolvida, inicialmente, por Bernhard Riemann (1826-1866), Georg Cantor (1845-1918) e Emile Borel (1871-1956) sendo generalizada posteriormente por Henri Lebesgue
 (1875-1941).
-A priori, seu desenvolvimento tinha o intuito de generalizar a integral de Riemann corrigindo o defeito de só valer para casos excepcionais, mas nos dias atuais possui aplicações nas mais diversas áreas tais como: Análise Funcional, Probabilidade, Estatística, Equações Diferenciais Parciais, dentre outras. 
+A priori, seu desenvolvimento tinha o intuito de generalizar a integral de Riemann corrigindo o defeito de só valer para casos excepcionais com poucos pontos de descontinuidade. Nos dias atuais,	 possui aplicações nas mais diversas áreas tais como: Análise Funcional, Probabilidade, Estatística, Equações Diferenciais Parciais, dentre outras. 
 Embora a teoria da integração de Lebesgue seja extremamente importante na atualidade não é comumente apresentada para alunos de graduação em ciências exatas.
 Dito isso, este trabalho visa abordar a teoria da medida e da integração de Lebesgue de maneira introdutória para alunos de graduação em ciências da natureza buscando expôr alguns dos resultados mais relevantes e elementares.
 Isso é feito utilizando uma metodologia de natureza básica com abordagem quantitativa através de uma revisão bibliográfica.
